fix: address toml deps for some rhel based systems

--- a/influxdb/parameters/os_family/RedHat.yaml
+++ b/influxdb/parameters/os_family/RedHat.yaml
@@ -19,4 +19,7 @@ values:
     gpgcheck: 1
     baseurl: https://repos.influxdata.com/rhel/$releasever/$basearch/stable/
     gpgkey: https://repos.influxdata.com/influxdata-archive.key
+  pkg:
+    dependencies:
+      - python3-pytoml
 ...
